test/squareFunctionReplace1.slq

def f[n:!â„•]wildâ‡’vector(n,0:ğ”¹);
def main(){
	f[1][2]:=H(f[1][2]); /// error
}
